Revert "Merge branch 'jdbc-livecode' of https://github.com/mbukovina127/vava-project"
This reverts commit 3343a971e043fe785f775c8cacb24128aa40e837, reversing
changes made to 92c94c5ca205f9e3ef48c241efe126fc8462fc8a.